# ArtronShop-Smart-Office

./: .gitignore  ArtronShop Smart Office protocol.docx
Light-Contoller-FW/Light-Controller-FW/: platformio.ini
Light-Contoller-FW/Light-Controller-FW/src/: main.cpp
NOW-Gateway-FW/Controller-FW/: platformio.ini
NOW-Gateway-FW/Controller-FW/src/: main.cpp
NOW-Gateway-FW/RF-FW/src/: main.cpp
Smart-Dashboard-FW/SquareLine Studio Project/: Dashboard.sll  Dashboard.spj
Smart-Dashboard-FW/SquareLine Studio Project/assets/: ui_font_Kanit18.c  ui_font_Kanit18.fcfg  ui_font_Kanit24.c  ui_font_Kanit24.fcfg  ui_font_Segment32.c  ui_font_Segment32.fcfg  ui_font_Segment42.c  ui_font_Segment42.fcfg
Smart-Dashboard-FW/include/: lv_conf.h
Smart-Dashboard-FW/lib/ATD3.5-S3_Library/: library.json  library.properties
Smart-Dashboard-FW/lib/ATD3.5-S3_Library/src/: ATD3.5-S3.h  Common.h  LCD.cpp  LCD.h  Sound.cpp  Touch.cpp
Smart-Dashboard-FW/lib/PMS_Library-1.1.0/src/: PMS.cpp
Smart-Dashboard-FW/src/: main.cpp
Smart-Dashboard-FW/src/gui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Smart-Dashboard-FW/src/gui/images/: ui_img_111191404.c  ui_img_1756937144.c  ui_img_1821463755.c  ui_img_1857898281.c  ui_img_330755264.c  ui_img_dust_png.c  ui_img_temperatures_png.c
Smart-Dashboard-FW/src/gui/screens/: ui_Index.c
